tests/golden/type_errors/import_struct_method_namespace_unknown.cd
import "../import_struct_method_namespace/lib.cd" as shapes;
let p: shapes.Point = shapes.Point { x: 1, y: 2 };
print p.missing();
