tests/golden/type_errors/import_struct_method_namespace_unknown.err
Type error at <repo>/tests/golden/type_errors/import_struct_method_namespace_unknown.cd:3:17: struct `shapes.Point` has no method `missing`
  print p.missing();
                  ^
